# B-CPP-500-COT-5-1-rtype

./: README.md
map_editor/: ange.json  bad.json  brad.json  chef.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map_editor  map_editor.pro  map_editor_fr_BJ.ts  qmake_qmake_qm_files.qrc  style.css  test.json  test2
map_editor/test/include/: map_editor.h
map_editor/test/src/: main.cpp
map_editor2/: map_editor  qmake_qmake_qm_files.qrc
nova_engine/documentation/: tips.txt
nova_engine/documentation/dev_documentation/: tips.txt
nova_engine/documentation/dev_documentation/html/: annotated.html  classes.html  dir_000003_000004.html  dir_000003_000006.html  dir_000003_000007.html  dir_000003_000008.html  dir_000009_000000.html  dir_000010_000000.html  dir_000011_000000.html  dir_000012_000000.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_1585a19f8fd7693f6df3c492c57ae8aa.html  dir_1585a19f8fd7693f6df3c492c57ae8aa_dep.map  dir_2052808828190f934b76e979ee65af8a.html  dir_2052808828190f934b76e979ee65af8a_dep.map  dir_20c208f1e36d189aa887b92939f051fa.html  dir_210a0711d8820f5795b6bb1f0b53567a.html  dir_210a0711d8820f5795b6bb1f0b53567a_dep.map  dir_210a0711d8820f5795b6bb1f0b53567a_dep.md5  dir_27b49f52b87ef3dff4a807a8e48028ae.html  dir_3b3c05403e1e2ec7eed293354acbaae3.html  dir_416bbe97ebde6bd698d784b2127d3570.html  (+58 more)
nova_engine/include/audio_component/: PlaylistComponent.hpp  soundComponent.hpp
nova_engine/include/core/: asset_handler.hpp  compact_array.hpp  core_utils.hpp  entity.hpp  hybrid_array.hpp  message.hpp  register.hpp  sparse_array.hpp  system.hpp
nova_engine/include/event_controller/: clickable_component.hpp  controllable_component.hpp  input_component.hpp
nova_engine/include/graphical_component/: ButtonComponent.hpp  CircleComponent.hpp  RectangleComponent.hpp  SpriteComponent.hpp  TextComponent.hpp  WindowComponent.hpp
nova_engine/include/physics_component/: acceleration_component.hpp  force_component.hpp  gravity_component.hpp  ground_component.hpp  mass_component.hpp  position_component.hpp  rectangle_box_component.hpp  rigid_body_component.hpp  velocity_component.hpp
nova_engine/include/role_component/: actor_component.hpp  behavioral_component.hpp  linker_component.hpp  score_component.hpp  snack_bar_component.hpp
nova_engine/include/ui_component/: drawable_component.hpp
nova_engine/src/: core_utils.cpp  tips.txt
nova_engine/src/event_system/: controll_system.cpp  input_system.cpp  keyboard_system.cpp  ui_system.cpp
nova_engine/src/graphical_system/: draw_system.cpp
nova_engine/src/physics_system/: collide_detection_system.cpp  collision_apply_system.cpp  gravity_system.cpp  position_system.cpp
nova_engine/src/role_system/: behavioral_system.cpp  snack_bar_system.cpp
rtype/: CMakeLists.txt  conanfile.txt
rtype/RFC/: RFC_0xXXL_Server_Client_Communication.txt  rfc.txt
rtype/assets/: tips.txt
rtype/assets/.save/: scoreboard.json
rtype/assets/rtype_config/: assets.json  endless.json  game_mode.json  game_over.json  history.json  loading.json  login.json  option.json  players.json  room.json  score.json  spaceships.json  start.json
rtype/assets/rtype_config/map_creer/: CMakeCache.txt  CMakeLists.txt  JsonEditor.cpp  JsonEditor.h  Makefile  cmake_install.cmake  help.json  main.cpp
rtype/assets/rtype_config/map_creer/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
rtype/assets/scripts/: alien.lua  basic_weapon.lua  battle.lua  battle_sur.lua  body_guard.lua  boul.lua  boul_sur.lua  crevette.lua  follow.lua  gremlin.lua  ob_down_weapon.lua  ob_down_weapon_2.lua  ob_up_weapon.lua  ob_up_weapon_2.lua  pique.lua  player_ai.lua  player_weapon.lua  robot_down.lua  robot_up.lua  shield.lua  target.lua  worm.lua
rtype/documentation/network_documentation/: tips.txt
rtype/documentation/nova_r_type_documentation/: tips.txt
rtype/include/core/: game.hpp  graphical_client.hpp  tips.txt
rtype/include/network/: tips.txt
rtype/include/network/client/: client.hpp  tips.txt
rtype/include/network/server/: IEnemy.hpp  IPlayer.hpp  binary_protocol.hpp  compress_data.hpp  serveur.hpp  tips.txt
rtype/level/: level_1.json  level_2.json  level_3.json  level_4.json
rtype/level/maper_level/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  maper_level  maper_level.pro
rtype/qt_map/: Makefile  mainwindow.cpp  mainwindow.h  map.pro  name_of_the_app  test.cpp
rtype/records/: omer
rtype/src/client/: client.cpp
rtype/src/client/graphical_client/: engine_init.cpp  game_engine.cpp
rtype/src/client/graphical_client/game_system/: delete_enemy.cpp  delete_weapon_system.cpp  sound_system.cpp
rtype/src/client/graphical_client/utility/: utility.cpp  utility_survival.cpp
rtype/src/server/: binary_protocol.cpp  compress_data.cpp  create_player.cpp  dead_actors.cpp  deconnexion.cpp  enemy.cpp  error_managment.cpp  main.cpp  move.cpp  next_level.cpp  serveur.cpp  shoot.cpp  spawn_enemy.cpp  start_game_all_pos.cpp  tips.txt
rtype/src/server/demo_network/: delete_enemy.cpp  delete_weapon_system.cpp  demo_network.cpp  demo_network.hpp  engine_init_network.cpp
zuma/: CMakeLists.txt
zuma/assets/zuma_config/: assets.json  menu.json
zuma/include/: engine_init.hpp  zuma.hpp  zuma_utils.hpp
zuma/src/: engine_init.cpp  main.cpp
(+544 files in other folders)
